gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/enum_init.d
version https://git-lfs.github.com/spec/v1
oid sha256:e8b88f403136e8797b24e418f61dcc11cc88f2c17f44078f12f7b254b6984655
size 3011
